<resources>
    <string name="app_name">Prevenção DCNT</string>

    <string name="parse_app_id">ih17LzHvWd7nsSZ9iQSqo0ymIfXWwYzmMG3sOilj</string>
    <string name="parse_client_key">PJW3q1jRs1Pll0LxfovghEzEjDiKufTPMUBc8yjH</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hintLogin">Login</string>
    <string name="hintPassword">Senha</string>
    <string name="hintConfirmPassword">Confirme a Senha</string>
    <string name="hintNome">Nome</string>
    <string name="hintAltura">Altura(cm)</string>
    <string name="hintDtNascimento">Data de Nascimento</string>
    <string name="hintEmailNutricionista">E-mail do(a) Nutricionista</string>
    <string name="hintEmail">E-mail</string>
    <string name="login_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="or">ou</string>
    <string name="login_button">Entrar</string>
    <string name="cadastrar">Cadastre-se</string>

    <string name="login_toast">Bem vindo!</string>

    <string name="oops_title">Oops! Confira seus dados.</string>
    <string name="HistoricoFamiliar"><u>Histórico de doenças familiares</u></string>
    <string name="FatoresUsuario"><u>Suas Informacoes</u></string>
    <string name="dados_invalidos">Existem campos que não foram preenchidos</string>
    <string name="peso_invalido">Informe o seu peso</string>
    <string name="hintAlimento">Alimento</string>
    <string name="hintQuantidade">Quantidade</string>
    <string name="hintPeriodicidade">Periodicidade</string>

    <string name="descricaoPratica"><b>%1$s</b></string>

    <string-array name="sexo_array">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="raca_array">
        <item>Amarela</item>
        <item>Branca</item>
        <item>Negra</item>
    </string-array>

    <string-array name="sim_nao_array">
        <item>Não</item>
        <item>Sim</item>
    </string-array>

    <string-array name="nivel_array">
        <item>Baixo</item>
        <item>Normal</item>
        <item>Alto</item>
    </string-array>

</resources>
