<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintLogin"
                android:autoText="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txtPassword"
                android:layout_below="@+id/txtLogin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintPassword" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txtConfirmPassword"
                android:layout_below="@+id/txtPassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintConfirmPassword" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNome"
                android:layout_below="@+id/txtConfirmPassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintNome"
                android:autoText="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Qual seu sexo?"
                android:id="@+id/lblSexo"
                android:layout_below="@+id/textNome"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/spnSexo"
                android:layout_toRightOf="@+id/lblSexo"
                android:layout_below="@+id/textNome"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAltura"
                android:layout_below="@+id/lblSexo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintAltura"
                android:autoText="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/textDtNascimento"
                android:layout_below="@+id/textAltura"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/hintDtNascimento"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Qual a sua raça?"
                android:id="@+id/lblRaca"
                android:layout_below="@+id/textDtNascimento"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/spnRaca"
                android:layout_toRightOf="@+id/lblRaca"
                android:layout_below="@+id/textDtNascimento"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textEmail"
                android:layout_below="@+id/lblRaca"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintEmail"
                android:autoText="false" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="É nutricionista?"
                android:id="@+id/swtNutricionista"
                android:layout_below="@+id/textEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textEmailNutri"
                android:layout_below="@+id/swtNutricionista"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:hint="@string/hintEmailNutricionista"
                android:autoText="false" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>



